--- a/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
@@ -34,7 +34,14 @@
         <Setter Property="BorderBrush" Value="#FF9DCD19"/>
     </Style>
     <Style TargetType="{x:Type DatePicker}" BasedOn="{StaticResource BaseStyle}">
-        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="Background" Value="#FFF0FDFC"/>
+        <Setter Property="BorderBrush" Value="#FF9DCD19"/>
+        <Setter Property="Cursor" Value="Hand" />
+    </Style>
+    <Style x:Key="CommonDatePickerStyle"  TargetType="{x:Type DatePicker}" BasedOn="{StaticResource BaseStyle}">
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="Background" Value="#FFF0FDFC"/>
         <Setter Property="BorderBrush" Value="#FF9DCD19"/>
@@ -83,7 +90,7 @@
     </Style>
     <Style TargetType="{x:Type MenuItem}">
         <Style.Setters>
-            <Setter Property="MinWidth" Value="120" />
+            <!--<Setter Property="MinWidth" Value="120" />-->
             <Setter Property="Height" Value="30" />
             <Setter Property="Margin" Value="5,5" />
             <Setter Property="Foreground" Value="White" />
@@ -98,6 +105,10 @@
             <Trigger Property="IsChecked" Value="False">
                 <Setter Property="Control.Background" Value="#FF90929C"/>
             </Trigger>
+            <Trigger Property="IsVisible" Value="False">
+                <Setter Property="Width" Value="0" />
+                <Setter Property="Margin" Value="0" />
+            </Trigger>
         </Style.Triggers>
     </Style>
     <Style TargetType="{x:Type TextBlock}" >
@@ -108,5 +119,6 @@
     <Style TargetType="{x:Type DataGrid}">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="RowHeight" Value="30" />
     </Style>
 </ResourceDictionary> 
