--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
+      xmlns:convert="clr-namespace:SmallHoneybee.Wpf.Common.PropertyConvert"
       mc:Ignorable="d" 
 	Title="{x:Static props:Resources.Produce}">
     <Page.Resources>
@@ -13,6 +14,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <convert:VisibilityConverter x:Key="VisibilityConverter"></convert:VisibilityConverter>
         </ResourceDictionary>
     </Page.Resources>
     <Grid  Resources="{StaticResource CommonStyle}">
@@ -41,14 +43,19 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" Text="条形码/编号/名称：" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-            <TextBox Background="#FFE7F5F5" Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
+            <TextBox Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
             <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
             <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
             <Button  Grid.Column="4" Grid.Row="0" Content="保存" Click="BtnSave_Click" ></Button>
             <Button  Grid.Column="5" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>
         </Grid>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Row="2" Background="#FF1D1F1C" />
-        <DataGrid Grid.Row="3" Name="gridProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.Produces,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True" FontWeight="Medium">
+        <DataGrid Grid.Row="3" Name="gridProduces" AutoGenerateColumns="False" CanUserReorderColumns="True" CanUserResizeColumns="True" ItemsSource="{Binding Path=DataContext.Produces, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True" FontWeight="Medium">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource CommonTextStyle}" >
+                    <Setter Property="Margin" Value="1" />
+                </Style>
+            </DataGrid.Resources>
             <DataGrid.Columns>
                 <!--<DataGridTemplateColumn Header="产品系列" Width="150">
                     <DataGridTemplateColumn.CellTemplate>
@@ -67,48 +74,64 @@
                 <DataGridTemplateColumn Header="条形码">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding BarCode, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding BarCode, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceHeightEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="编号">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding ProduceNo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding ProduceNo, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceHeightEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="名称">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="数量">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding Quantity, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding Quantity, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceFactoryPriceEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="零售价">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding RetailPrice, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding RetailPrice, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceFactoryPriceEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="零售折扣">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding DiscountRate, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding DiscountRate, StringFormat=F2, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.ProduceHeightEdit,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
+                <DataGridTextColumn Header="出厂价"  Binding="{Binding FactoryPrice, StringFormat=F2}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
+                            <Setter Property="FrameworkElement.Visibility" Value="{Binding 
+                                Path=DataContext.CurrentUserRolePermission.ProduceFactoryPriceEdit,
+                                RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}},
+                                Converter={StaticResource VisibilityConverter}}"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="最近一次订购日期" Binding="{Binding LastOrderDate, StringFormat=yyyy-MM-dd}"/>
                 <DataGridTextColumn Header="别名" Binding="{Binding Name}"/>
-                <!--<DataGridTextColumn Header="包装规格" Binding="{Binding PackSize}"/>-->
                     <DataGridTemplateColumn Header="销售规格">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
@@ -147,22 +170,15 @@
                     </DataGridTextColumn.CellStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="加工费" Binding="{Binding ProcessFee, StringFormat=F2}">
-                    <DataGridTextColumn.CellStyle>
+                    <DataGridTextColumn.ElementStyle>
                         <Style>
                             <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
                         </Style>
-                    </DataGridTextColumn.CellStyle>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="订货包装" Binding="{Binding OrderSize}"/>
                 <DataGridTextColumn Header="订购规格" Binding="{Binding HowPurchased}"/>
                 <DataGridTextColumn Header="订购规格/销售规格" Binding="{Binding PurchasedUsedRatio}"/>
-                <DataGridTextColumn Header="出厂价" Binding="{Binding FactoryPrice, StringFormat=F2}" Width="0">
-                    <DataGridTextColumn.CellStyle>
-                        <Style>
-                            <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
-                        </Style>
-                    </DataGridTextColumn.CellStyle>
-                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
