--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrder.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrder.xaml
@@ -1,12 +1,12 @@
 ﻿<Page x:Class="SmallHoneybee.Wpf.Views.SaleOrder"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"  
-      xmlns:local="clr-namespace:ConverterAndValidation"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:props="clr-namespace:SmallHoneybee.Wpf.Properties"
       xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:convert="clr-namespace:SmallHoneybee.Wpf.Common.PropertyConvert"
       mc:Ignorable="d" 
 	Title="订单">
     <Page.Resources>
@@ -16,13 +16,13 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Style.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <convert:StatusConverter x:Key="StatusConverter"></convert:StatusConverter>
         </ResourceDictionary>
-        <local:StatusConverter x:Key="StatusConverter"></local:StatusConverter>
     </Page.Resources>
     <av:Grid Resources="{StaticResource CommonStyle}">
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
-            <RowDefinition Height="85"></RowDefinition>
+            <RowDefinition Height="90"></RowDefinition>
             <RowDefinition Height="5"></RowDefinition>
             <RowDefinition Height="350"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
@@ -38,7 +38,7 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="45"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
@@ -129,12 +129,11 @@
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="购买人" Binding="{Binding User.Name}"/>
-
                 <DataGridTextColumn Header="备注" Binding="{Binding Description}"/>
 
             </DataGrid.Columns>
         </DataGrid>
-        <TextBlock  Grid.Column="0" Grid.Row="4" Name="TxtTotalInfo" FontWeight="Bold" Foreground="#FFEC1042" HorizontalAlignment="Right"/>
+        <TextBlock  Grid.Column="0" Grid.Row="4" Name="TxtTotalInfo" FontWeight="Bold" HorizontalAlignment="Right"/>
         <DataGrid Grid.Row="5" Name="GridSOProduces" AutoGenerateColumns="False" ItemsSource="{Binding Path=DataContext.SOProduceDomainModels,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True"  FontWeight="Medium">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="产品条形码" Binding="{Binding SOProduce.Produce.BarCode}"/>
