--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrderForm.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/SaleOrderForm.xaml
@@ -52,6 +52,11 @@
         <DataGrid Grid.Row="2" Name="GridSOProduces" AutoGenerateColumns="False"
                   ItemsSource="{Binding Path=DataContext.SOProduceDomainModels,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" 
              FontWeight="Medium">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource CommonTextStyle}" >
+                    <Setter Property="Margin" Value="1" />
+                </Style>
+            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTemplateColumn Width="30">
                     <DataGridTemplateColumn.CellTemplate>
@@ -76,13 +81,13 @@
                 <!--<DataGridTextColumn Header="产品条形码" Binding="{Binding SOProduce.Produce.BarCode}">
                     
                 </DataGridTextColumn>-->
-                <DataGridTextColumn Header="产品编号" Binding="{Binding SOProduce.Produce.ProduceNo}"/>
-                <DataGridTextColumn Header="产品名称"  Binding="{Binding SOProduce.Produce.Name}"/>
+                <DataGridTextColumn Header="产品编号" IsReadOnly="True" Binding="{Binding SOProduce.Produce.ProduceNo}"/>
+                <DataGridTextColumn Header="产品名称" IsReadOnly="True"  Binding="{Binding SOProduce.Produce.Name}"/>
                 <DataGridTemplateColumn Header="购买数额">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Width="80"  HorizontalAlignment="Stretch"  Text="{Binding SOProduce.Quantity,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,StringFormat=F2}" Background="Azure"
-                                     Name="TxtQuantity" LostFocus="TxtQuantity_OnLostFocus"></TextBox>
+                            <TextBox Width="80"  HorizontalAlignment="Stretch"  Text="{Binding SOProduce.Quantity,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,StringFormat=F2}"
+                                    Name="TxtQuantity" LostFocus="TxtQuantity_OnLostFocus"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -96,26 +101,27 @@
                 <DataGridTemplateColumn Header="优惠折扣">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Width="80"  HorizontalAlignment="Right"  Text="{Binding SOProduce.DiscountRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}" Background="Azure"
-                                     Name="TxtDiscountRate" LostFocus="TxtDiscountRate_OnLostFocus"></TextBox>
+                            <TextBox Width="80"  HorizontalAlignment="Right"  Text="{Binding SOProduce.DiscountRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}"
+                                     Name="TxtDiscountRate" LostFocus="TxtDiscountRate_OnLostFocus"
+                                     IsEnabled="{Binding Path=DataContext.CurrentUserRolePermission.SaleOrderFavorableCost,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="实际单价" Binding="{Binding CostPerUnit,  Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}">
+                <DataGridTextColumn Header="实际单价" IsReadOnly="True"  Binding="{Binding CostPerUnit,  Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}">
                     <DataGridTextColumn.CellStyle>
                         <Style>
                             <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
                         </Style>
                     </DataGridTextColumn.CellStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="小计金额" Binding="{Binding SOProduceTotal,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}" FontWeight="Bold">
+                <DataGridTextColumn Header="小计金额" IsReadOnly="True"  Binding="{Binding SOProduceTotal,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}" FontWeight="Bold">
                     <DataGridTextColumn.CellStyle>
                         <Style>
                             <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
                         </Style>
                     </DataGridTextColumn.CellStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="剩余库存" Binding="{Binding SOProduce.Produce.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}">
+                <DataGridTextColumn Header="剩余库存" IsReadOnly="True"  Binding="{Binding SOProduce.Produce.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=F2}">
                     <DataGridTextColumn.CellStyle>
                         <Style>
                             <Setter Property="FrameworkElement.HorizontalAlignment" Value="Right"/>
