--- a/SmallHoneybee/SmallHoneybee.Wpf/MainWindow.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/MainWindow.xaml
@@ -31,13 +31,16 @@
         <StackPanel Grid.Row="1">
             <Menu x:Name="SamllHoneybeeMenu" Height="40" FontSize="20" Margin="10,5" Background="#FFC9CBD3">
                 <MenuItem x:Name="SamllHoneybeeSaleOrderMenu" Header="零售管理" Click="RTReportMenuNavigation_Click">
-                
                 </MenuItem>
                 <MenuItem x:Name="SamllHoneybeeProduceMenu"  Header="商品管理" Click="HSReportMenuNavigation_Click" >
                 </MenuItem>
                 <MenuItem x:Name="SamllHoneybeePurchaseOrderMenu"  Header="订单管理"  Click="PollutePortMenuNavigation_Click">
                 </MenuItem>
                 <MenuItem x:Name="SamllHoneybeeUserMenu" Header="用户管理" Click="ServiceCommMenuNavigation_Click" >
+                </MenuItem>
+                <MenuItem x:Name="SamllHoneybeeDayBookMenu" Header="日常开支" Click="SamllHoneybeeDayBookMenu_OnClick" >
+                </MenuItem>
+                <MenuItem x:Name="SamllHoneybeeSystemSettingMenu" Header="系统设置" Click="SamllHoneybeeSystemSettingMenu_OnClick" >
                 </MenuItem>
             </Menu>
         </StackPanel>
