--- a/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Resources/Style.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"   
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <Style x:Key="BaseStyle" TargetType="{x:Type Control}">
         <Setter Property="Margin" Value="5" />
     </Style>
@@ -13,7 +13,18 @@
         <Setter Property="Cursor" Value="Hand" />
     </Style>
     <Style TargetType="{x:Type GroupBox}" BasedOn="{StaticResource BaseStyle}">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="BorderBrush" Value="#FF9DCD19"/>
+    </Style>
+    <Style TargetType="{x:Type TabControl}" BasedOn="{StaticResource BaseStyle}">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="BorderBrush" Value="#FF9DCD19"/>
+    </Style>
 
+    <Style TargetType="{x:Type StackPanel}">
+        <Setter Property="Margin" Value="5" />
     </Style>
 
     <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource BaseStyle}">
@@ -27,6 +38,7 @@
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="Background" Value="#FFF0FDFC"/>
         <Setter Property="BorderBrush" Value="#FF9DCD19"/>
+        <Setter Property="Cursor" Value="Hand" />
     </Style>
 
     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource BaseStyle}">
@@ -35,13 +47,35 @@
         <Setter Property="Background" Value="#FFF0FDFC"/>
         <Setter Property="BorderBrush" Value="#FF9DCD19"/>
     </Style>
-    
+
+    <Style x:Key="CommonTextStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource BaseStyle}">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="Background" Value="#FFF0FDFC"/>
+        <Setter Property="BorderBrush" Value="#FF9DCD19"/>
+    </Style>
+    <Style x:Key="MarkedTextStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource CommonTextStyle}">
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="FontSize" Value="16"/>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="True">
+                <Setter Property="Control.Foreground" Value="#FF90929C"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Control.Background" Value="#FFE43030"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource BaseStyle}">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="Cursor" Value="Hand" />
     </Style>
-    <Style TargetType="{x:Type ListBox}" BasedOn="{StaticResource BaseStyle}">
-
+    <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource BaseStyle}">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="Cursor" Value="Hand" />
     </Style>
 
     <Style TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource BaseStyle}">
@@ -49,7 +83,7 @@
     </Style>
     <Style TargetType="{x:Type MenuItem}">
         <Style.Setters>
-            <Setter Property="Width" Value="140" />
+            <Setter Property="MinWidth" Value="120" />
             <Setter Property="Height" Value="30" />
             <Setter Property="Margin" Value="5,5" />
             <Setter Property="Foreground" Value="White" />
