--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/BalanceFrom.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/BalanceFrom.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Icon="/SmallHoneybee.Wpf;component/images/Safari.ico"
-        Title="结算表单" Height="380" Width="800" WindowStartupLocation="CenterScreen" Closed="BalanceFrom_OnClosed">
+        Background="#FFC9CBD3" BorderBrush="#FF293955"  WindowStartupLocation="CenterScreen" 
+        Title="结算表单" Height="510" Width="800" Closed="BalanceFrom_OnClosed">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,85 +15,95 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="180"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="780*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,10,0,0">||结算表单</TextBlock>
-        <Grid Grid.Column="0" Grid.Row="1" Margin="5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="250"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="会员卡号/电话号码：" ></TextBlock>
-            <TextBox Grid.Column="1" Text="" Name="UserNoOrPhone" TextChanged="UserNoOrPhone_OnTextChanged"></TextBox>
-            <TextBlock Grid.Column="2" Text="{Binding Path=DataContext.BalanceDomainModel.UserBaseInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" FontWeight="Bold"></TextBlock>
-            <TextBlock Grid.Column="0" Grid.Row="1"  Text="{Binding Path=DataContext.BalanceDomainModel.UserMemberInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" 
-                       Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold"></TextBlock>
-        </Grid>
-        <Grid Grid.Column="0" Grid.Row="2" Margin="5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <RadioButton Grid.Row="1" x:Name="RadBanlanceMode" GroupName="BanlanceMode" DataContext="1" IsChecked="True"  Content="现金计算：" VerticalAlignment="Center" HorizontalAlignment="Left"></RadioButton>
-            <RadioButton Grid.Row="3"  GroupName="BanlanceMode" DataContext="2"  Content="会员卡计算："></RadioButton>
-            <StackPanel  Grid.Row="0" Orientation="Horizontal" >
-                <TextBlock Text="小计金额："></TextBlock>
-                <TextBlock Width="80"  Text="{Binding Path=DataContext.BalanceDomainModel.TotalPrice,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Right"/>
-                <Label BorderBrush="#FF0F0F0F" Height="1" BorderThickness="2"></Label>
-                <TextBlock Text="优惠金额："></TextBlock>
-                <TextBox Width="170" Text="{Binding Path=DataContext.BalanceDomainModel.DiscountPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDiscount" KeyDown="TxtDiscount_OnKeyDown" ></TextBox>
-                <TextBlock Text="＝"></TextBlock>
-                <TextBlock  Text="应收金额：" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Right"/>
-            </StackPanel>
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="5"/>
-                    <ColumnDefinition Width="160"/>
-                </Grid.ColumnDefinitions>
-               <TextBlock Grid.Column="0"  Text="实收金额：" Margin="5" HorizontalAlignment="Right"></TextBlock>
-                <TextBox Grid.Column="1" Text="{Binding Path=DataContext.BalanceDomainModel.RealPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtRealPrice" KeyDown="TxtRealPrice_OnKeyDown" HorizontalContentAlignment="Right"></TextBox>
-                <TextBlock Grid.Column="2" Text="找零：" HorizontalAlignment="Right" Grid.ColumnSpan="2"  Width="91"></TextBlock>
-                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.ReturnedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Left"/>
-            </Grid>
-            <Grid Grid.Row="4"  >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="160"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0"  Text="扣除金额：" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Grid.Column="1"  Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDeduct" HorizontalAlignment="Right" ></TextBlock>
-                <TextBlock Grid.Column="2" Text="剩余金额：" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Grid.Column="3"  Text="{Binding Path=DataContext.BalanceDomainModel.SurplusPrice,Mode=OneWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" HorizontalAlignment="Left" Margin="0"/>
-            </Grid>
-            <Grid Grid.Column="0" Grid.Row="5">
+        <GroupBox  Grid.Column="0" Grid.Row="1" Header="会员信息">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="{Binding Path=DataContext.BalanceDomainModel.MemberInfo,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBlock>
+                <TextBlock Grid.Column="0" Text="会员卡号/电话号码：" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="" Name="UserNoOrPhone" TextChanged="UserNoOrPhone_OnTextChanged"></TextBox>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="会员基本信息：" HorizontalAlignment="Right"></TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Path=DataContext.BalanceDomainModel.UserBaseInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="当前会员积分：" HorizontalAlignment="Right"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"  Text="{Binding Path=DataContext.BalanceDomainModel.UserMemberInfo,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBlock>
+            </Grid>
+        </GroupBox>
+        <StackPanel  Grid.Row="2" Orientation="Horizontal" Background="#FFE8F5C4" >
+            <TextBlock Text="商品小计金额：" VerticalAlignment="Center"></TextBlock>
+            <TextBox MinWidth="120" IsEnabled="false" Text="{Binding Path=DataContext.BalanceDomainModel.TotalPrice,StringFormat=F2,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
+            <TextBlock Text="优惠金额：" VerticalAlignment="Center"></TextBlock>
+            <TextBox MinWidth="120" Text="{Binding Path=DataContext.BalanceDomainModel.DiscountPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDiscount" KeyDown="TxtDiscount_OnKeyDown" ></TextBox>
+            <TextBlock  Text="应收金额：" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
+            <TextBox MinWidth="150" IsEnabled="false" Style="{StaticResource MarkedTextStyle}"
+                Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" />
+        </StackPanel>
+        <TabControl Grid.Column="0" Grid.Row="3">
+            <TabItem Name="TabItemCash">
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton  Width="150" x:Name="RadBanlanceModeCash" GroupName="BanlanceMode" DataContext="1" IsChecked="True"  Content="现金计算"></RadioButton>
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="实收金额：" VerticalAlignment="Center" HorizontalAlignment="Right"></TextBlock>
+                    <TextBox Grid.Row="0"  Grid.Column="1" Text="{Binding Path=DataContext.BalanceDomainModel.RealPrice,StringFormat=F2,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtRealPrice" KeyDown="TxtRealPrice_OnKeyDown"></TextBox>
+                    <TextBlock Grid.Row="1"  Grid.Column="0" Text="找零：" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold"/>
+                    <TextBox Grid.Row="1"  Grid.Column="1" Style="{StaticResource MarkedTextStyle}" IsEnabled="False" Text="{Binding Path=DataContext.BalanceDomainModel.ReturnedPrice,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
                 </Grid>
-        </Grid>
-        <StackPanel  Grid.Column="0" Grid.Row="3" Margin="5" Orientation="Horizontal" HorizontalAlignment="Right">
+            </TabItem>
+            <TabItem Name="TabItemCard">
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton Width="150" x:Name="RadBanlanceModeCard" GroupName="BanlanceMode" DataContext="2"  Content="会员卡计算"></RadioButton>
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0"  Text="扣除金额：" HorizontalAlignment="Right"></TextBlock>
+                    <TextBox Grid.Column="1" IsEnabled="False" Grid.Row="0"  Text="{Binding Path=DataContext.BalanceDomainModel.ReceivedPrice,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,Mode=OneWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" Name="TxtDeduct"></TextBox>
+                    <TextBlock Grid.Column="0" Grid.Row="1"  Text="剩余金额：" HorizontalAlignment="Right"></TextBlock>
+                    <TextBox Grid.Column="1" IsEnabled="False" Grid.Row="1" Style="{StaticResource MarkedTextStyle}" Text="{Binding Path=DataContext.BalanceDomainModel.SurplusPrice,Mode=OneWay,UpdateSourceTrigger=PropertyChanged, StringFormat=F2,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal" >
+            <TextBlock Text="结算会员积分："></TextBlock>
+            <TextBlock Text="{Binding Path=DataContext.BalanceDomainModel.MemberInfo,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay,RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"></TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button  FontWeight="Bold" Content="结算" Width="120" Name="ButSure" Click="ButSure_OnClick"/>
             <Button FontWeight="Bold" Content="返回" Name="ButCancel" Click="ButCancel_OnClick"></Button>
         </StackPanel>
